backend: added audio converters

This makes the backend more robust in case either playbin's internal
decodebin does not produce supported audio formats, or the audio sink
cannot playback with the produced audio format.

Signed-off-by: Carlos Rafael Giani <dv@pseudoterminal.org>

https://bugzilla.gnome.org/show_bug.cgi?id=687483